🐛修复(serve): dict 优化
